--- a/pages/templates/pages/aboutus.html
+++ b/pages/templates/pages/aboutus.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Document</title>
-</head>
-<body>
-    <h4>welcome in about us pages</h4>
-</body>
-</html>
+{% extends '_base.html' %}
+{% block page_title %}About Us{% endblock %}
+{% block content %}
+    <h2>AboutUs Page</h2>
+{% endblock %}
