--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Document</title>
-</head>
-<body>
-    <h2>welcome in home page</h2>
-</body>
-</html>
+{% extends '_base.html' %}
+
+{% block page_title %}home page{% endblock %}
+{% block content %}
+    <h1>Home Page</h1>
+{% endblock %}
