--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Document</title>
-</head>
-<body>
-<form action="" method="post">
+{% extends '_base.html' %}
+{% load crispy_forms_tags %}
+{% block page_title %}LogIn{% endblock %}
+{% block content %}
+    <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy}}
     <input type="submit" value="Log In">
 </form>
-</body>
-</html>
+{% endblock %}
